feat(ui): :adhesive_bandage: Se ajusta footer

--- a/index.html
+++ b/index.html
@@ -627,11 +627,8 @@
     </div>
 
     <div class="container text-center py-3 small">
-      
-      
-
-
-
+      Made by <a href="https://templatedeck.com" class="link-fancy" target="_blank">templatedeck.com</a>
+      Custom by <a href="https://hmvsoluciones.com" class="link-fancy" target="_blank">hmvsoluciones.com</a>
     </div>
   </footer>
 
