feat(home): :hammer: Se agrega imagen mas clara

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
 
       <div class="container position-relative">
         <div class="col-12 col-lg-8 mt-0 h-100 position-absolute top-0 end-0 bg-cover" data-aos="fade-left"
-          style="background-image: url(img/webp/interior.webp); filter: grayscale(50%);">
+          style="background-image: url(img/webp/interior.webp);  filter: brightness(140%);">
 
         </div>
         <div class="row">
 
           <div class="col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
             <h1 class="display-1 fw-bold mt-5">Coach ejecutivo y de vida</h1>
-            <p class="lead"> Generar un ambiente de confianza y conexión empática para que los coachees desarrollen su
+            <p class="lead" style="font-weight: bold;"> Generar un ambiente de confianza y conexión empática para que los coachees desarrollen su
               potencial y logren sus metas.</p>
             <a href="#services" class="btn btn-dark btn-xl shadow me-3 rounded-0 my-5">Servicios</a>
           </div>
